--- a/vue-web/package.json
+++ b/vue-web/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "element-plus": "^2.7.8",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
