--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency><!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
         <dependency>
@@ -76,7 +76,6 @@
             <version>1.9.22.1</version>
             <scope>runtime</scope>
         </dependency>
-
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -144,6 +143,27 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.4.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mysql</groupId>
+                        <artifactId>mysql-connector-j</artifactId>
+                        <version>9.0.0</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <configurationFile>mbg.xml</configurationFile>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
             </plugin>
         </plugins>
     </build>
