--- a/vue-web/package.json
+++ b/vue-web/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.3",
     "element-plus": "^2.7.8",
+    "store": "^2.0.12",
     "vue": "^3.4.29",
     "vue-router": "^4.4.2"
   },
