--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.22.1</version>
             <scope>runtime</scope>
+        </dependency><!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>6.1.0</version>
         </dependency>
 
         <dependency>
